--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,8 @@
     section: PowerTools
     option: enabled
     value: "1"
+  notify:
+    - yum update cache
   when:
     - ansible_distribution == "CentOS"
     - ansible_distribution_major_version >= "8"
