--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -40,9 +40,11 @@ jobs:
           - image: "centos"
             tag: "latest"
           - image: "fedora"
-            tag: "31"
+            tag: "32"
           - image: "fedora"
             tag: "latest"
+          - image: "fedora"
+            tag: "rawhide"
           - image: "opensuse"
             tag: "latest"
     steps:
