--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,8 +17,7 @@ galaxy_info:
         - 8
     - name: Fedora
       versions:
-        - 31
-        - 32
+        - all
     - name: OpenSUSE
       versions:
         - all
