--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: enable powertools
   ini_file:
-    path: /etc/yum.repos.d/CentOS-PowerTools.repo
+    path: /etc/yum.repos.d/CentOS-Linux-PowerTools.repo
     section: PowerTools
     option: enabled
     value: "1"
