--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for powertools
 
 - name: enable powertools
-  ini_file:
+  community.general.ini_file:
     path: /etc/yum.repos.d/CentOS-Linux-PowerTools.repo
     section: powertools
     option: enabled
