--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,15 @@
 ---
 # tasks file for powertools
 
+- name: Set repofile for CentOS
+  set_fact:
+    powertools_repo: /etc/yum.repos.d/CentOS-Linux-PowerTools.repo
+- name: Set repofile for AlmaLinux
+  set_fact:
+    powertools_repo: /etc/yum.repos.d/almalinux-powertools.repo
 - name: enable powertools
   community.general.ini_file:
-    path: /etc/yum.repos.d/CentOS-Linux-PowerTools.repo
+    path: "{{ powertools_repo }}"
     section: powertools
     option: enabled
     value: "1"
@@ -11,5 +17,5 @@
   notify:
     - yum update cache
   when:
-    - ansible_distribution in [ "CentOS", "EL" ]
+    - ansible_distribution in [ "CentOS", "EL", "AlmaLinux" ]
     - ansible_distribution_major_version >= "8"
