--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,3 @@
 ---
 
-powertools_repo_file:
-  EL: CentOS-Linux-PowerTools.repo
-  CentOS: CentOS-Linux-PowerTools.repo
-  Rocky: Rocky-PowerTools.repo
-  AlmaLinux: almalinux-powertools.repo
+powertools_repo_path: "/etc/yum.repos.d/{{ _powertools_repo_file[ansible_distribution] }}"
