--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,9 @@
 ---
 # tasks file for powertools
 
-- name: import assert.yml
-  ansible.builtin.import_tasks: assert.yml
-  run_once: yes
-  delegate_to: localhost
-
 - name: enable powertools
   community.general.ini_file:
-    path: "{{ powertools_repo_path }}"
+    path: "{{ ansible_distribution }}-powertools.repo"
     section: powertools
     option: enabled
     value: "1"
