value of state must be one of: absent, installed, latest, present, removed, got: autotrace

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -13,8 +13,7 @@
         - remove a powertools package
 
   handlers:
-
     - name: remove a powertools package
       ansible.builtin.package:
         name: opencv
-        state: autotrace
+        state: absent
