--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,7 +5,7 @@
   gather_facts: no
 
   tasks:
-    - name: install a powertools package
+    - name: Install a powertools package
       ansible.builtin.package:
         name: autotrace
         state: present
@@ -13,7 +13,7 @@
         - remove a powertools package
 
   handlers:
-    - name: remove a powertools package
+    - name: Remove a powertools package
       ansible.builtin.package:
         name: opencv
         state: absent
