--- a/vars/main.yml
+++ b/vars/main.yml
@@ -16,13 +16,17 @@ _powertools_os_keys: "{{ _powertools_os_keys_internal|flatten }}"
 _powertools_repo_name:
   RedHat: powertools
   AlmaLinux_9: crb
+  Rocky_9: crb
 
 powertools_repo_name: "{{ _powertools_os_keys|map('extract', _powertools_repo_name)|select('defined')|first }}"
 
 _powertools_repo_file:
   RedHat: "{{ ansible_distribution }}-PowerTools.repo"
   Rocky: "{{ ansible_distribution }}-PowerTools.repo"
+  # Rocky >=9.0
+  Rocky_9: "{{ ansible_distribution|lower }}.repo"
   AlmaLinux_8: "almalinux-PowerTools.repo"
+  # Alma >=8.5
   AlmaLinux_8_5: "almalinux-powertools.repo"
   AlmaLinux_9: "almalinux-crb.repo"
   CentOS: "{{ ansible_distribution }}-{{ ansible_distribution_release }}-PowerTools.repo"
